--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,17 +20,17 @@
 	<body>
 	
 		<header>
-			<h1><a href="/" class="heading">{{ page.title }}</a></h1>
+			<h1><a href="/" class="heading">ProTracker.tk</a></h1>
 			<h2>By Anders Meadwell</h2>
 			
 			<!-- navbar begins here -->
 			<nav>
 				<ul style="margin-right: 20px; margin-left: 20px; padding-right: 0px; padding-left: 0px;">
-					<li style="margin-right: 0px;"><a href="/">Home</a></li>
-					<li style="margin-left: 0px; margin-right: 0px;"><a href="/about">About</a></li>
-					<li style="margin-left: 0px; margin-right: 0px;"><a href="/blog">Blog</a></li>
-					<li style="margin-left: 0px; margin-right: 0px;"><a href="/contact">Contact</a></li>
-					<li style="margin-left: 0px;"><a href="/donate">Donate</a></li>
+					<li style="margin-right: 0px;"><a href="/" class="nav">Home</a></li>
+					<li style="margin-left: 0px; margin-right: 0px;"><a href="/about" class="nav">About</a></li>
+					<li style="margin-left: 0px; margin-right: 0px;"><a href="/blog" class="nav">Blog</a></li>
+					<li style="margin-left: 0px; margin-right: 0px;"><a href="/contact" class="nav">Contact</a></li>
+					<li style="margin-left: 0px;"><a href="/donate" class="nav">Donate</a></li>
 					<!-- remember to add class "active" to current page on nav bar -->
 				</ul>
 			</nav>
