--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,9 @@
 ---
 layout: default
+page: blog
 ---
 
 <h1>{{ page.title }}</h1>
 <time datetime="{{ page.date }}">{{ page.readableDate }}</time>
 {{ content }}
+<p>-Anders</p>
