--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,6 @@ h1, p, li, h2, figcaption, time {
 	color: black;
 	margin-left: 20px;
 	margin-right: 20px;
-	margin-right: 20px;
 	font-family: "Courier New", Courier, monospace;
 }
 
@@ -15,16 +14,25 @@ a {
 	color: black;
 }
 
-a.link:hover, a.blog:hover {
+a:hover, a.blog:hover {
 	text-decoration: underline solid;
 }
 
-a.link:link {
+a:link {
 	color: #0024d9;
 }
 
-a.link:visited {
+a:visited {
 	color: #8800cc;
+}
+
+a.blog:link, a.blog:visited, a.heading:link, a.heading:visited, a.nav:link, a.nav:visited {
+	color: black;
+}
+
+a.nav:hover {
+	color: white;
+	text-decoration: none;
 }
 
 .right {
@@ -67,9 +75,10 @@ li a:hover {
 	color: white;
 }
 
-.active {
+.active:visited, .active:link, .active:hover {
 	background-color: darkgrey;
 	color: white;
+	text-decoration: none;
 }
 
 li {
