--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,8 @@
 			
 			{% if layout.page == "blog" %}
 			<h2>Blog</h2>
+			{% elseif supersecretcode.page == "404" %}
+			<h2>By Anders Meadwell</h2>
 			{% else %}
 			<h2>{{ page.title }}</h2>
 			{% endif %}
