--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 			
 			{% if layout.page == "blog" %}
 			<h2>Blog</h2>
-			{% elseif supersecretcode.page == "404" %}
+			{% elsif supersecretcode.page == "404" %}
 			<h2>By Anders Meadwell</h2>
 			{% else %}
 			<h2>{{ page.title }}</h2>
