--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,7 +72,7 @@
 		
 		<footer>
 			<hr>
-			<p>&copy 2018 Anders Meadwell</p>
+			<p>&copy 2018-2019 Anders Meadwell</p>
 		</footer>
 		
 		<!-- this is JSEcoin miner -->
