--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 			
 			{% if layout.page == "blog" %}
 			<h2>Blog</h2>
-			{% if layout.page == "writing" %}
+			{% elsif layout.page == "writing" %}
 			<h2>Writing</h2>
 			{% elsif page.title == "404" %}
 			<h2>By Anders Meadwell</h2>
